--- a/client/src/app/modules/auth/modules/employee/components/orders/closed-orders/closed-orders.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/closed-orders/closed-orders.component.html
@@ -10,7 +10,7 @@
       </ng-container>
       <ng-container matColumnDef="client">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> CLIENT </th>
-        <td mat-cell *matCellDef="let row"><a [routerLink]="['../../clients/', row.clientId]">{{row.clientName}}</a></td>
+        <td mat-cell *matCellDef="let row"><a [routerLink]="['../../clients', row.clientId]">{{row.clientName}}</a></td>
       </ng-container>
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> STATUS </th>
