--- a/client/src/app/modules/auth/modules/employee/components/statements/statement-detail/statement-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/statements/statement-detail/statement-detail.component.html
@@ -3,35 +3,45 @@
   <mat-card-header>
     <div mat-card-avatar><fa-icon icon="file-invoice-dollar" size="3x"></fa-icon></div>
     <mat-card-title>Statement Datails - ID: {{statement.id}}</mat-card-title>
+    <mat-card-subtitle><span class="thick">Created by</span> {{getEmailCreated()}} at {{statement.createdAt | date:'short'}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <div>
-      <span class="thick">Client: </span> {{statement.client.name}}
-    </div>
-    <div><span class="thick">Created by</span> {{getEmailCreated()}} at {{statement.createdAt | date:'short'}}</div>
-    <div class="table-responsive">
-      <table mat-table [dataSource]="orders">
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> ID </th>
-          <td mat-cell *matCellDef="let row"><a target="_blank" [routerLink]="['../../orders/', row.id]">{{row.id}}</a></td>
-        </ng-container>
-        <ng-container matColumnDef="note">
-          <th mat-header-cell *matHeaderCellDef> NOTE </th>
-          <td mat-cell *matCellDef="let row"> {{row.note}} </td>
-        </ng-container>
-        <ng-container matColumnDef="createdDate">
-          <th mat-header-cell *matHeaderCellDef> CREATED </th>
-          <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'shortDate'}} </td>
-        </ng-container>
-        <ng-container matColumnDef="totalAmount">
-          <th mat-header-cell *matHeaderCellDef> TOTAL </th>
-          <td mat-cell *matCellDef="let row"> {{row.totalAmount | currency}} </td>
-        </ng-container>
-      </table>
-    </div>
     <form [formGroup]="statementFG" class="form-container">
+      <div fxLayout="row wrap" fxLayoutGap="20px" fxLayoutAlign="space-around space-between">
+        <div fxFlex="nogrow">
+          <span class="thick">Client:</span> {{statement.client.name}}
+        </div>
+        <div fxFlex="nogrow">
+          <mat-form-field>
+            <mat-label>Statement Date</mat-label>
+            <input matInput [matDatepicker]="dp" placeholder="Choose a date" formControlName="statementDate">
+            <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
+            <mat-datepicker #dp></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="table-responsive">
+        <table mat-table [dataSource]="orders">
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let row"><a target="_blank" [routerLink]="['../../orders/', row.id]">{{row.id}}</a></td>
+          </ng-container>
+          <ng-container matColumnDef="note">
+            <th mat-header-cell *matHeaderCellDef> NOTE </th>
+            <td mat-cell *matCellDef="let row"> {{row.note}} </td>
+          </ng-container>
+          <ng-container matColumnDef="createdDate">
+            <th mat-header-cell *matHeaderCellDef> CREATED </th>
+            <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'shortDate'}} </td>
+          </ng-container>
+          <ng-container matColumnDef="totalAmount">
+            <th mat-header-cell *matHeaderCellDef> TOTAL </th>
+            <td mat-cell *matCellDef="let row"> {{row.totalAmount | currency}} </td>
+          </ng-container>
+        </table>
+      </div>
       <div fxLayout="row" fxLayoutAlign="end">
         <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
           <div>
@@ -59,10 +69,10 @@
     </form>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-raised-button (click)="close()">Close</button>
-    <button mat-raised-button color="warn" (click)="delete()">
+    <button mat-raised-button class="action" (click)="close()">Close</button>
+    <button mat-raised-button class="action" color="warn" (click)="delete()">
       <fa-icon icon="exclamation-circle"></fa-icon> Delete
     </button>
-    <button mat-raised-button color="green" (click)="save()" [disabled]="!statementFG.dirty">Save</button>
+    <button mat-raised-button class="action" color="green" (click)="save()" [disabled]="!statementFG.dirty">Save</button>
   </mat-card-actions>
 </mat-card>
