--- a/client/src/app/modules/auth/modules/employee/components/statements/statements/statements.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/statements/statements/statements.component.html
@@ -26,25 +26,17 @@
  -->
         <td mat-cell *matCellDef="let row"><a [routerLink]="['/auth/employee/clients/',  row.clientId]">{{row.clientName}}</a></td>
       </ng-container>
+      <ng-container matColumnDef="statementDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DATE </th>
+        <td mat-cell *matCellDef="let row"> {{row.statementDate | date:'shortDate'}} </td>
+      </ng-container>
       <ng-container matColumnDef="totalAmount">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> TOTAL </th>
         <td mat-cell *matCellDef="let row"> {{row.totalAmount | currency}} </td>
       </ng-container>
-      <ng-container matColumnDef="paidAmount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> PAID </th>
-        <td mat-cell *matCellDef="let row"> {{row.paidAmount | currency}} </td>
-      </ng-container>
       <ng-container matColumnDef="note">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NOTE </th>
         <td mat-cell *matCellDef="let row"> {{row.note}} </td>
-      </ng-container>
-      <ng-container matColumnDef="createdDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> CREATED </th>
-        <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'shortDate'}} </td>
-      </ng-container>
-      <ng-container matColumnDef="updatedDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> UPDATED </th>
-        <td mat-cell *matCellDef="let row"> {{row.updatedAt | date:'shortDate'}} </td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
