--- a/client/src/app/modules/auth/modules/employee/components/client-detail/client-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/client-detail/client-detail.component.html
@@ -145,6 +145,7 @@
   <mat-card-actions align="end">
     <button mat-raised-button routerLink="../">Close</button>
     <button mat-raised-button color="green" (click)="save()">Save</button>
-    <button mat-raised-button color="warn" (click)="delete()">Delete</button>
+    <!-- Hide delete button until more secure confirm dialog 
+      <button mat-raised-button color="warn" (click)="delete()">Delete</button> -->
   </mat-card-actions>
  </mat-card>
