--- a/client/src/app/modules/auth/modules/employee/components/statements/statements/statements.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/statements/statements/statements.component.html
@@ -38,6 +38,12 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> NOTE </th>
         <td mat-cell *matCellDef="let row"> {{row.note}} </td>
       </ng-container>
+      <ng-container matColumnDef="pdf">
+        <th mat-header-cell *matHeaderCellDef> PDF </th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button matTooltip="Download statement document" (click)="downloadPdf(row.id)"><fa-icon icon="file-pdf"></fa-icon></button>
+        </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
