Add statement components to customer module.

--- a/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/customer-layout/customer-layout.component.html
@@ -6,7 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="orders">Orders</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="orders"><fa-icon icon="shopping-cart"></fa-icon> Orders</a></li>
+        <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="statements"><fa-icon icon="file-invoice-dollar"></fa-icon> Statements</a></li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item" routerLinkActive="active">
