--- a/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
@@ -11,19 +11,31 @@
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <div>Status: <span [ngClass]="{
-      'status-submitted' : order.status == 'Submitted',
-      'status-processed' : order.status == 'Processed',
-      'status-shipped' : order.status == 'Shipped',
-      'status-completed' : order.status == 'Completed',
-      'status-cancelled' : order.status == 'Cancelled'
-    }"> {{order.status | uppercase }} </span></div>
+    <div style="margin-bottom: 10px" fxLayout="row wrap" fxLayoutGap="40px" fxLayoutAlign="space-between center">
+      <div fxFlex="nogrow">
+        <span class="thick">Client:</span> {{order.client.name}}
+      </div>
+      <div fxFlex="nogrow"> <span class="thick">Status:</span>
+        <span [ngClass]="{
+          'status-submitted' : order.status == 'Submitted',
+          'status-processed' : order.status == 'Processed',
+          'status-shipped' : order.status == 'Shipped',
+          'status-completed' : order.status == 'Completed',
+          'status-cancelled' : order.status == 'Cancelled'
+        }"> {{order.status | uppercase }} 
+        </span>
+      </div>
+      <div fxFlex="auto">
+      </div>
+      <div fxFlex="nogrow">
+        <button mat-raised-button matTooltip="Download invoice document" (click)="downloadPdf()"><fa-icon icon="file-pdf"></fa-icon> Download</button>
+      </div>
+    </div>
     <form [formGroup]="orderFG" class="form-container">
       <div style="margin-top: 10px; margin-bottom: 10px" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="center space-between">
-        <mat-form-field appearance="outline">
-          <mat-label>Client</mat-label>
-          <input matInput formControlName="clientInfo" [readonly]="true">
-        </mat-form-field>
+        <div>
+          <span class="thick">Order Items:</span>
+        </div>        
         <div class="table-responsive">
           <table mat-table [dataSource]="orderItems">
             <!-- Row definitions -->
