--- a/client/src/app/modules/auth/modules/employee/components/orders/todays-orders/todays-orders.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/todays-orders/todays-orders.component.html
@@ -34,6 +34,12 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> CREATED </th>
         <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'shortDate'}} </td>
       </ng-container>
+      <ng-container matColumnDef="pdf">
+        <th mat-header-cell *matHeaderCellDef> PDF </th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-icon-button matTooltip="Download invoice document" (click)="downloadPdf(row.id)"><fa-icon icon="file-pdf"></fa-icon></button>
+        </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
