Add google chart module.

--- a/client/src/app/modules/auth/modules/employee/components/dashboard/dashboard.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
-<p>
-dashboard works!
-</p>
+<div fxLayout="column" fxLayoutGap="10px">
+  <app-todays-snapshots></app-todays-snapshots>
+  <app-total-orders></app-total-orders>
+</div>
