--- a/client/src/app/modules/auth/modules/employee/components/orders/open-orders/check-inventory/check-inventory.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/open-orders/check-inventory/check-inventory.component.html
@@ -40,9 +40,9 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> CATEGORY </th>
             <td mat-cell *matCellDef="let row"> {{row.category}} </td>
           </ng-container>
-          <ng-container matColumnDef="totalOrderQty">
+          <ng-container matColumnDef="totalOrderCount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ORDER QTY </th>
-            <td mat-cell *matCellDef="let row"> {{row.totalOrderQty}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.totalOrderCount}} </td>
           </ng-container>
           <ng-container matColumnDef="inventoryCount">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> INVENTORY QTY </th>
@@ -55,5 +55,5 @@
 </div>
 <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end">
   <button mat-raised-button class="action" [mat-dialog-close]="false">Close</button>
-  <button mat-raised-button class="action" (click)="generatePDF()"><fa-icon icon="file-pdf"></fa-icon> Generate PDF</button>
+  <button mat-raised-button class="action" [disabled]="dialogData.orderIds.length===0" (click)="generatePDF()"><fa-icon icon="file-pdf"></fa-icon> Generate PDF</button>
 </div>
