Add package-distribution component.

--- a/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/employee-layout/employee-layout.component.html
@@ -1,5 +1,5 @@
 <div class="auth-body">
-  <nav class="navbar navbar-expand-lg navbar-light sticky-top flex-md-nowrap p-0">
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top flex-md-nowrap p-0" style="background-color: white;">
     <a class="companyName" href="auth/employee"><img border="0" alt="Company Logo" src={{getCompanyLogo()}} width="60" height="60">{{getCompanyName()}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
