Add description column to delivery route table.

--- a/client/src/app/modules/auth/modules/employee/components/new-delivery-route/new-delivery-route.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/new-delivery-route/new-delivery-route.component.html
@@ -1,4 +1,4 @@
-<h3 mat-dialog-title>New Delivery Route</h3>
+<h3 mat-dialog-title><fa-icon icon="truck" size="2x"></fa-icon> New Delivery Route</h3>
 <div mat-dialog-content>
   <form [formGroup]="deliveryRouteFG" class="form-container">
     <mat-form-field appearance="outline">
