--- a/client/src/app/modules/auth/modules/employee/components/orders/open-orders/check-inventory/check-inventory.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/open-orders/check-inventory/check-inventory.component.html
@@ -1,4 +1,4 @@
-<h3 mat-dialog-title><fa-icon icon="file-invoice"></fa-icon> Inventory Check</h3>
+<h3 mat-dialog-title><fa-icon icon="file-invoice" size="2x"></fa-icon> Inventory Check</h3>
 <div mat-dialog-content>
   <div fxLayout="column" fxLayoutGap="10px" faLayoutAlign="center">
     <div fxLayout="row" fxLayoutGap="20px">
