--- a/client/src/app/modules/auth/modules/employee/components/orders/open-orders/package-distribution/package-distribution.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/open-orders/package-distribution/package-distribution.component.html
@@ -1,4 +1,4 @@
-<h3 mat-dialog-title><fa-icon icon="truck-loading"></fa-icon> Package Distribution List</h3>
+<h3 mat-dialog-title><fa-icon icon="truck-loading" size="2x"></fa-icon> Package Distribution List</h3>
 <div mat-dialog-content>
   <div fxLayout="column" fxLayoutGap="10px" faLayoutAlign="center">
     <div *ngIf="showSpinner; else elseBlock">
