--- a/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/delivery-routes/delivery-routes.component.html
@@ -17,6 +17,10 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
         <td mat-cell *matCellDef="let row"><a [routerLink]="[row.id]">{{row.id}}</a></td>
       </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> DESCRIPTION </th>
+        <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+      </ng-container>
       <ng-container matColumnDef="driverName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> DRIVER NAME </th>
         <td mat-cell *matCellDef="let row"> {{row.driverName}} </td>
